--- a/htmlcss/index.html
+++ b/htmlcss/index.html
@@ -153,28 +153,22 @@
         <div class="card">
           <p class="date">27.07.2016</p>
           <p class="content">
-            <b>
               Liana Technologies and Encode Solution merge to create unique
               mobile solution
-            </b>
           </p>
         </div>
         <div class="card">
           <p class="date">28.01.2016</p>
           <p class="content">
-            <b>
               From a local startup to a global player: Liana Technologies among
               the forerunners od digital marketing technology
-            </b>
           </p>
         </div>
         <div class="card">
           <p class="date">02.07.2015</p>
           <p class="content">
-            <b>
               Liana Technologies Hong Kong launched a series of digital
               marketing events in June
-            </b>
           </p>
         </div>
       </div>
@@ -187,7 +181,7 @@
             <img src="./img/logo/bosch.png" alt="bosch-logo" />
           </div>
           <div class="content">
-            <h5><b>Robert Bosch</b></h5>
+            <h5>Robert Bosch</h5>
             <p>Bosch is a multinational engineering and electronics company.</p>
           </div>
         </div>
@@ -196,7 +190,7 @@
             <img src="./img/logo/the_body_shop.png" alt="tbs-logo" />
           </div>
           <div class="content">
-            <h5><b>The Body shop</b></h5>
+            <h5>The Body shop</h5>
             <p>
               The Body Shop is a global beauty brand and it has more than 3,000
               stores in more than 60 countries.
@@ -208,7 +202,7 @@
             <img src="./img/logo/lapland_hotel.png" alt="lapland-hotel-logo" />
           </div>
           <div class="content">
-            <h5><b>Lapland Hotels</b></h5>
+            <h5>Lapland Hotels</h5>
             <p>
               Lapland Hotels is the largest and the most diverse hotel chain in
               Lapland.
@@ -220,7 +214,7 @@
             <img src="./img/logo/ikea.png" alt="ikea-logo" />
           </div>
           <div class="content">
-            <h5><b>IKEA</b></h5>
+            <h5>IKEA</h5>
             <p>IKEA is a multinational furniture store.</p>
           </div>
         </div>
@@ -254,10 +248,10 @@
           </ul>
         </div>
       </div>
-      <div class="lower-footer d-flex">
+      <div class="lower-footer d-flex justify-content-between align-items-end">
         <div class="on-left d-flex align-items-center">
           <div class="on-left">
-            <p><b>Sales and inquiries</b></p>
+            <p>Sales and inquiries</p>
             <p>Email: sales@liantech.com</p>
             <p>Phone: +358 10 387 7053</p>
           </div>
@@ -268,6 +262,23 @@
           </div>
         </div>
         <div class="on-right">
+          <ul>
+            <li>
+              <a href="#"
+                ><img src="./img/icons/facebook.png" alt="facebook"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="./img/icons/twitter.png" alt="twitter"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="./img/icons/linkedin.png" alt="linkedin"
+              /></a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
