--- a/htmlcss/index.html
+++ b/htmlcss/index.html
@@ -57,7 +57,7 @@
           </li>
         </ul>
       </div>
-      <nav class="second-nav">
+      <nav class="second-nav d-flex justify-content-between align-items-center">
         <div class="on-left">
           <ul>
             <li>
@@ -82,7 +82,7 @@
               id="inline-search"
               placeholder="Search"
             />
-            <button type="submit" class="btn btn-primary">Search</button>
+            <button type="submit" class="btn btn-primary btn-sm">Search</button>
           </form>
         </div>
       </nav>
@@ -93,11 +93,11 @@
       </div>
       <div class="center-container">
         <h1>Software fueling digital marketing</h1>
-        <button type="submit" class="btn btn-primary">Learn more</button>
+        <button type="submit" class="btn btn-primary btn-sm">Learn more</button>
       </div>
     </div>
     <div class="body-section">
-      <div class="col3-img d-flex justify-content-sm-between">
+      <div class="col3-img d-flex justify-content-between">
         <div class="img-container">
           <img src="./img/company.png" alt="company-banner" />
           <div class="center-container">
@@ -153,29 +153,29 @@
         <div class="card">
           <p class="date">27.07.2016</p>
           <p class="content">
-              Liana Technologies and Encode Solution merge to create unique
-              mobile solution
+            Liana Technologies and Encode Solution merge to create unique mobile
+            solution
           </p>
         </div>
         <div class="card">
           <p class="date">28.01.2016</p>
           <p class="content">
-              From a local startup to a global player: Liana Technologies among
-              the forerunners od digital marketing technology
+            From a local startup to a global player: Liana Technologies among
+            the forerunners od digital marketing technology
           </p>
         </div>
         <div class="card">
           <p class="date">02.07.2015</p>
           <p class="content">
-              Liana Technologies Hong Kong launched a series of digital
-              marketing events in June
+            Liana Technologies Hong Kong launched a series of digital marketing
+            events in June
           </p>
         </div>
       </div>
     </div>
     <div class="references-section">
       <h2>References</h2>
-      <div class="container d-flex justify-content-between">
+      <div class="container">
         <div class="card">
           <div class="logo">
             <img src="./img/logo/bosch.png" alt="bosch-logo" />
@@ -230,7 +230,7 @@
           class="form-control"
           placeholder="Your email address"
         />
-        <button type="submit" class="btn btn-primary">Subscribe</button>
+        <button type="submit" class="btn btn-primary btn-sm">Subscribe</button>
       </div>
     </div>
     <footer>
